<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AppearanceFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/tv_resources_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_resources_heading" />

        <TextView
            android:id="@+id/tv_resources_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/appearance"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_settings_bg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/img_white_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resources_heading" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_settings_blue"
            app:layout_constraintBottom_toBottomOf="@id/img_settings_bg"
            app:layout_constraintEnd_toEndOf="@id/img_settings_bg"
            app:layout_constraintStart_toStartOf="@id/img_settings_bg"
            app:layout_constraintTop_toTopOf="@id/img_settings_bg" />

        <TextView
            android:id="@+id/tv_system_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/system_default"
            android:textColor="@color/color_556_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_settings_bg"
            app:layout_constraintStart_toEndOf="@+id/img_settings_bg"
            app:layout_constraintTop_toTopOf="@id/img_settings_bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_dark_mode_bg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_white_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_settings_bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_dark_mode"
            app:layout_constraintBottom_toBottomOf="@id/img_dark_mode_bg"
            app:layout_constraintEnd_toEndOf="@id/img_dark_mode_bg"
            app:layout_constraintStart_toStartOf="@id/img_dark_mode_bg"
            app:layout_constraintTop_toTopOf="@id/img_dark_mode_bg" />

        <TextView
            android:id="@+id/tv_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/dark_mode"
            android:textColor="@color/color_556_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_dark_mode_bg"
            app:layout_constraintStart_toEndOf="@+id/img_dark_mode_bg"
            app:layout_constraintTop_toTopOf="@id/img_dark_mode_bg" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_light_mode_bg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_white_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_dark_mode_bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_light"
            app:layout_constraintBottom_toBottomOf="@id/img_light_mode_bg"
            app:layout_constraintEnd_toEndOf="@id/img_light_mode_bg"
            app:layout_constraintStart_toStartOf="@id/img_light_mode_bg"
            app:layout_constraintTop_toTopOf="@id/img_light_mode_bg" />

        <TextView
            android:id="@+id/tv_light_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/light_mode"
            android:textColor="@color/color_556_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/img_light_mode_bg"
            app:layout_constraintStart_toEndOf="@+id/img_light_mode_bg"
            app:layout_constraintTop_toTopOf="@id/img_light_mode_bg" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_light_mode_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_settings_bg">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="You don't have any contact yet"
            android:textColor="@color/color_89a_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_light_mode_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_invite_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#F3EFFF"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/invite_friends"
            android:textAllCaps="false"
            android:textColor="#5F2EEA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_friends" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
