<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.zedux.ui.viewModels.AuthViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_learning"
                android:textSize="24sp"
                android:textColor="@color/color_556_blue"
                android:layout_marginTop="80dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:boxStrokeColor="@color/color_eee_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_learning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/e_mail"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_black"
                    android:text="@={viewModel.email}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:boxStrokeColor="@color/color_eee_gray"
                app:layout_constraintTop_toBottomOf="@id/edit_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/color_eee_gray"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:textColor="@color/color_black"
                    android:text="@={viewModel.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Sign up"
                android:onClick="@{() -> viewModel.signUp()}"
                android:textColor="@color/color_223_blue"
                android:textSize="16sp"
                android:fontFamily="@font/averta_regular"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/color_fd8_orange"
                android:textAllCaps="false"
                android:layout_marginTop="65dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@id/edit_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent "/>

        <androidx.constraintlayout.helper.widget.Flow
                app:constraint_referenced_ids="tv_no_account, tv_login"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:flow_horizontalGap="5dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_no_account"
                android:text="Already have an account?"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:text="Login"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_regular"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

